--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,8 @@
-This is a basic notes app. You can add, delete or update note. I have added some features such as swipe to delete and the option to delete all your notes
+This is a basic notes app. You can add, delete or update your notes. I have added some features such as swipe to delete and the option to delete all your notes
+
+
+
+
+#images in ReadME
+![](images/addNote.jpg)
+
