--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,6 @@
-This is a basic notes app. You can add, delete or update your notes. I have added some features such as swipe to delete and the option to delete all your notes
+This is a basic notes app. You can add, delete or update your notes. I have added some features such as swipe to delete and the option to delete all your notes.
+
+#images
 
 
 
